Fixes for retailers white space and container

--- a/src/assets/css/_sass/components/_retailer.scss
+++ b/src/assets/css/_sass/components/_retailer.scss
@@ -116,6 +116,7 @@
     display: block;
     text-transform: capitalize;
     font-weight: 600;
+    text-align: center;
     @include text-shadow;
     @include h2;
     @include font-display;
